--- a/requirements.txt
+++ b/requirements.txt
@@ -8,20 +8,22 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cookiecutter==2.6.0
-fastapi==0.110.2
-flet==0.22.0
-flet-core==0.22.0
-flet-runtime==0.22.0
+fastapi==0.101.1
+flet==0.19.0
+flet-core==0.19.0
+flet-fastapi==0.19.0
+flet-runtime==0.19.0
 h11==0.14.0
-httpcore==1.0.5
+httpcore==0.17.3
 httptools==0.6.1
-httpx==0.27.0
+httpx==0.24.1
 idna==3.7
 Jinja2==3.1.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 oauthlib==3.2.2
+packaging==23.2
 pydantic==2.7.1
 pydantic_core==2.18.2
 Pygments==2.17.2
@@ -36,12 +38,13 @@ requests==2.31.0
 rich==13.7.1
 six==1.16.0
 sniffio==1.3.1
-starlette==0.37.2
+starlette==0.27.0
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.11.0
 urllib3==2.2.1
 uvicorn==0.29.0
-watchdog==4.0.0
+watchdog==3.0.0
 watchfiles==0.21.0
-websockets==12.0
+websocket-client==1.8.0
+websockets==11.0.3
